devops/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-backend
  labels:
    name: healthcare-backend
    environment: production
    app: healthcare
